# invoice-automator

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  credentials.example.json  email_generator.py  export_api_token_from_1password.sh  fibery.py  gmail.py  gmail_quickstart.py  list_invoices.py  logging.conf  main.py  makefile  pdf_generator.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-test.yml  publish-container-to-docker-hub.yml  publish-container.yml
docs/: api_access.rst  development.rst  functionality.rst
docs/lib/: CliKeywords.robot  FiberyLibrary.py  GmailLibrary.py  KeyringLibrary.py  MoneyBirdLibrary.py
scripts/: add_sales_invoice_webhook.sh  delete_webhook.sh  init_api_tokens.sh  list_webhooks.sh
src/invoice_automator/: __main__.py  commands.py  docker_compose_keyring_backend.py  email_generator.py  fibery.py  gmail.py  main.py  moneybird.py  pdf_generator.py  template_helpers.py  webapp.py
style/: footer.html  header.html
style/css/: bootstrap.css  invoice.css  style.css
templates/: email.txt  invoice.html
tests/: generate-pdf-invoices.sh  list-invoices.sh  prepare-emails-for-invoices.sh  test_docker_compose_keyring_backend.py  test_moneybird_fibery_mapping.py  test_pdf_generation.py  test_webhook_data_filters.py
tests/data/: invoice_1.json
tests/run/secrets/: serra_ict_invoice_automator_SerraICTInvoiceAutomatorMoneyBirdToken
