[project]
name = "invoice_automator"
description = "Integration scripts and documentation to automate Serra ICT's invoice workflows."
authors = [
    { name = "Marijn van der Zee", email = "marijn@serraict.com" },
    { name = "gpt-4-0613", email = "genie@serraict.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "click",
    "Jinja2",
    "pdfkit",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "keyring",
]
dynamic = ["version"]


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
get-paid = "invoice_automator:__main__.cli"

[tool.setuptools_scm]
